initial program creation

--- a/Restaurats.API/appsettings.Development.json
+++ b/Restaurats.API/appsettings.Development.json
@@ -1,8 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "ConnectionStrings": {
+        "RestaurantConnection": "Server=(localdb)\\MSSQLLocalDB;Database=RestaurantsDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
     }
-  }
 }
