--- a/Restaurats.API/Properties/launchSettings.json
+++ b/Restaurats.API/Properties/launchSettings.json
@@ -13,7 +13,8 @@
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": false,
+        "launchBrowser": true,
+      "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7163;http://localhost:5141",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
