--- a/Restaurats.API/Restaurats.API.csproj
+++ b/Restaurats.API/Restaurats.API.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="UpdateRestaurant\**" />
+    <Content Remove="UpdateRestaurant\**" />
+    <EmbeddedResource Remove="UpdateRestaurant\**" />
+    <None Remove="UpdateRestaurant\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="MediatR" Version="12.4.1" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.2">
