--- a/Restaurats.API/appsettings.json
+++ b/Restaurats.API/appsettings.json
@@ -1,9 +1,22 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "Serilog": {
+        "MinimumLevel": {
+            "Default": "Information",
+            "Override": {
+                "Microsoft": "Warning",
+                "Microsoft.EntityFrameworkCore": "Information",
+                "System": "Warning"
+            }
+        },
+        "WriteTo": [
+            {
+                "Name": "Console",
+                "Args": {
+                    "outputTemplate": "[{Level:u3}] {Message:lj}{NewLine}"
+                }
+            }
+        ],
+        "Enrich": [ "FromLogContext", "WithMachineName" ]
+    },
+    "AllowedHosts": "*"
 }
