continue on publish database and make paged allow null

--- a/src/Restaurats.API/appsettings.json
+++ b/src/Restaurats.API/appsettings.json
@@ -8,14 +8,23 @@
                 "System": "Warning"
             }
         },
-        "WriteTo": [
-            {
-                "Name": "Console",
-                "Args": {
-                    "outputTemplate": "[{Level:u3}] {Message:lj}{NewLine}"
-                }
-            }
-        ],
+      "WriteTo": [
+        {
+          "Name": "Console",
+          "Args": {
+            "outputTemplate": "[{Level:u3}] {Message:lj}{NewLine}"
+          }
+        },
+        {
+          "Name": "File",
+          "Args": {
+            "path": "Logs/Restaurant-Api-.log",
+            "rollingInterval": "Day",
+            "rollOnFileSizeLimit": true,
+            "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"
+          }
+        }
+      ],
         "Enrich": [ "FromLogContext", "WithMachineName" ]
     },
     "AllowedHosts": "*"
